@@ -1,3 +1,4 @@
+- ISSUE #15: Backwards compatibility with previous Arduino IDE (pure virtual functions were not supported);
 - ISSUE #18: Corrected problem with setLEDs() caused by changes in the previous version.
 
 Version 2.0.0
